Added about us, contact, and new releases page.

--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/">Food Delivery</a></li>
-                <li><a href="/new-releases">New Releases</a></li>
-                <li><a href="/about-us">About Us</a></li>
-                <li><a href="/contact-us">Contact Us</a></li>
-                <li><a href="/locations">Locations</a></li>
-                <li><a href="/account">Account</a></li>
+                <li><a href="/" class="active">Food Delivery</a></li>
+                <li><a href="/new.html">New Releases</a></li>
+                <li><a href="/about.html">About Us</a></li>
+                <li><a href="/contact.html">Contact Us</a></li>
+                <li><a href="/locations,html">Locations</a></li>
+                <li><a href="/account.html">Account</a></li>
             </ul>
         </nav>
         <input type="text" id="search-bar" placeholder="Search for food...">
     </header>
 
     <main>
+        <h2>Available Items</h2>
+
         <section id="food-list">
             <!-- Food items will be dynamically inserted here -->
         </section>
