--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="/index.html">Food Delivery</a></li>
                 <li><a href="/new.html">New Releases</a></li>
-                <li><a href="/about.html" class="active">About Us</a></li>
+                <li><a href="/" class="active">About Us</a></li>
                 <li><a href="/contact.html">Contact Us</a></li>
                 <li><a href="/locations.html">Locations</a></li>
                 <li><a href="/account.html">Account</a></li>
