--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <nav>
             <ul>
                 <li><a href="/" class="active">Food Delivery</a></li>
-                <li><a href="/new.html">New Releases</a></li>
-                <li><a href="/about.html">About Us</a></li>
-                <li><a href="/contact.html">Contact Us</a></li>
-                <li><a href="/locations,html">Locations</a></li>
-                <li><a href="/account.html">Account</a></li>
+                <li><a href="new.html">New Releases</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="locations,html">Locations</a></li>
+                <li><a href="account.html">Account</a></li>
             </ul>
         </nav>
         <input type="text" id="search-bar" placeholder="Search for food...">
