--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/index.html">Food Delivery</a></li>
-                <li><a href="/new.html">New Releases</a></li>
-                <li><a href="/about.html">About Us</a></li>
+                <li><a href="index.html">Food Delivery</a></li>
+                <li><a href="new.html">New Releases</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="/" class="active">Contact Us</a></li>
-                <li><a href="/locations.html">Locations</a></li>
-                <li><a href="/account.html">Account</a></li>
+                <li><a href="locations.html">Locations</a></li>
+                <li><a href="account.html">Account</a></li>
             </ul>
         </nav>
     </header>
